SSR being on causes the Rendered GlossDir and GlossCol AOVs to be multiplied/divided by the number of Render Samples. #86037

Closed
opened 2021-02-27 03:49:02 +01:00 by Evan Wilson · 5 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-26 21:23, hash: f7933d0744
Worked: (newest version of Blender that worked as expected)

Short description of error
When Rendering with SSR checked on, the GlossCol pass is being divided by the number of samples, while the GlossDir pass is getting multiplied.

Exact steps for others to reproduce the error
Factory Startup
Check Screen Space Reflections on
Check Specular Light and Color on
Render with different number of samples.

#86037.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-26 21:23, hash: `f7933d0744` Worked: (newest version of Blender that worked as expected) **Short description of error** When Rendering with `SSR` checked on, the GlossCol pass is being divided by the number of samples, while the GlossDir pass is getting multiplied. **Exact steps for others to reproduce the error** Factory Startup Check `Screen Space Reflections` on Check `Specular` `Light` and `Color` on Render with different number of samples. [#86037.blend](https://archive.blender.org/developer/F9844523/T86037.blend)
Author
Member

Added subscriber: @EAW

Added subscriber: @EAW
Evan Wilson changed title from SSR being on causes the Rendered Specular Color and Light AOVs to be multiplied/divided by the number of Render Samples. to SSR being on causes the Rendered GlossDir and GlossCol AOVs to be multiplied/divided by the number of Render Samples. 2021-02-27 03:54:47 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by c8293d6258

This issue was referenced by c8293d6258e2b74ca29356dd9deca59c127eed3c

This issue was referenced by a7b7f67fc4

This issue was referenced by a7b7f67fc4ad0a5bf4ffc2a64467b55479f4fd95

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-05-05 18:40:54 +02:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86037
No description provided.